Update with corrected values

--- a/Interaction_effects_in_subinterval_sensitivity_analysis.ipynb
+++ b/Interaction_effects_in_subinterval_sensitivity_analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 42,
    "id": "ff011384",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 43,
    "id": "a0803087",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 44,
    "id": "925905e0",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 45,
    "id": "1b594991",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 46,
    "id": "daa08421",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 47,
    "id": "ed0a40ac",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 48,
    "id": "5a41cf99",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 49,
    "id": "f48465d3",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 50,
    "id": "f9587ab4",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 51,
    "id": "51c96a1b",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 52,
    "id": "2033b7d6",
    "metadata": {},
    "outputs": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 53,
    "id": "9b02a5b9",
    "metadata": {},
    "outputs": [],
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 54,
    "id": "ae08ded3",
    "metadata": {},
    "outputs": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 55,
    "id": "ac0edc14",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 56,
    "id": "696c8f5a",
    "metadata": {},
    "outputs": [],
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 57,
    "id": "2fa37ff4",
    "metadata": {},
    "outputs": [
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 58,
    "id": "2b67b1bc",
    "metadata": {},
    "outputs": [
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 59,
    "id": "be2412f9",
    "metadata": {},
    "outputs": [
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 60,
    "id": "f25fcee0",
    "metadata": {},
    "outputs": [],
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 61,
    "id": "b3578961",
    "metadata": {},
    "outputs": [
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 62,
    "id": "8150343a",
    "metadata": {},
    "outputs": [
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 63,
    "id": "9efb13e9",
    "metadata": {},
    "outputs": [
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 64,
    "id": "26d03186",
    "metadata": {},
    "outputs": [
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 65,
    "id": "6da9204f",
    "metadata": {},
    "outputs": [
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "0e42874d",
    "metadata": {},
    "outputs": [
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 67,
    "id": "6c291ff1",
    "metadata": {},
    "outputs": [],
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 68,
    "id": "34723ecb",
    "metadata": {},
    "outputs": [
@@ -947,8 +947,10 @@
       "...\n",
       "Sensitivity indices for all variables in first-order: [0.245   0.245   0.245   0.55125]\n",
       "Inflation indices for all variables: [0. 0. 0. 0.]\n",
-      "Subinterval enclosure bounds for all variables: [3.96,8.04]\n",
-      "[2.0,10.0]\n"
+      "Subinterval enclosure bounds for all variables: [-0.0,8.0]\n",
+      "[-0.0,8.0]\n",
+      "[-0.0,8.0]\n",
+      "[-0.0,8.0]\n"
      ]
     }
    ],
@@ -960,12 +962,12 @@
     "y_si, yi_si, y_int, y_int_bounds = SSI_subinterval_combined(X0,n,fun_product,outputs=True)\n",
     "print(f'Sensitivity indices for all variables in first-order: {y_si}')\n",
     "print(f'Inflation indices for all variables: {yi_si}')\n",
-    "print(f'Subinterval enclosure bounds for all variables: {y_int_infl_bounds}')"
+    "print(f'Subinterval enclosure bounds for all variables: {y_int_bounds}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 69,
    "id": "b17330dc",
    "metadata": {},
    "outputs": [
@@ -997,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 70,
    "id": "7d621be1",
    "metadata": {},
    "outputs": [
@@ -1078,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 71,
    "id": "f6190524",
    "metadata": {},
    "outputs": [
@@ -1159,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 72,
    "id": "a6dee929",
    "metadata": {},
    "outputs": [
